Implement barcode and code scanner